[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tiles.sprites/tile010.tres" type="Texture" id=1]
[ext_resource path="res://assets/img/tile-bg.png" type="Texture" id=2]
[ext_resource path="res://cell/rotate_box/RotateBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://cell/Cell.gd" type="Script" id=4]
[ext_resource path="res://assets/img/plus.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[node name="Cell" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -874.0
margin_bottom = -450.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectBorder" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusIcon" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Markers" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earth" type="ColorRect" parent="Markers"]
visible = false
margin_left = 62.0
margin_top = 40.0
margin_right = 87.0
margin_bottom = 65.0
rect_min_size = Vector2( 25, 25 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 0
color = Color( 0.490196, 0.27451, 0, 0.784314 )

[node name="Label" type="Label" parent="Markers/Earth"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sea" type="ColorRect" parent="Markers"]
visible = false
margin_left = 62.0
margin_top = 62.0
margin_right = 87.0
margin_bottom = 87.0
rect_min_size = Vector2( 25, 25 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 0
color = Color( 0, 0.282353, 0.490196, 0.784314 )

[node name="Label" type="Label" parent="Markers/Sea"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateBox" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Tween" type="Tween" parent="."]
